crates/math-core/tests/snapshots/error_test__hspace_non_ascii.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\hspace{22öm}"
---
Error: Expected length with units, got "22öm".
   ╭─[ <input>:1:8 ]
   │
 1 │ \hspace{22öm}
   │        ───┬──  
   │           ╰──── expected length here
───╯
